--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Java template
 # Compiled class file
-*.class
 
 # Log file
 *.log
@@ -13,7 +12,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -30,3 +28,4 @@ gradle/
 gradlew
 gradlew.bat
 out/
+/src/test/
