--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,13 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
