--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     // Apache Commons
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    // compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
     // SimpleJSON library
     compile 'com.github.ReflxctionDev:SimpleJSON:1.9.5-SNAPSHOT'
 
     // Google GSON library
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+    // Joda Time library
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
+
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
